[package]
name = "cairo-lang-eq-solver"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Equation solving for Sierra generation."

[dependencies]
cairo-lang-utils = { path = "../cairo-lang-utils", version = "2.3.0" }
good_lp.workspace = true
tracing = "0.1.37"

[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
